# GDBlive

./: Cargo.toml  README.md  WEBSOCKET_USAGE.md  build-dev.bat  build-dev.ps1  build.bat  build.ps1
.github/workflows/: release.yml
addons/gdblive/: gdblive.gdextension
demo/: node_2d.gd  node_2d.tscn  project.godot  websocket_example.gd
demo/addons/gdblive/: gdblive.gdextension
example/: Cargo.toml  ble_device.rs  bluetooth_manager.rs  bluetooth_scanner.rs  runtime.rs  types.rs
src/: blive.rs  lib.rs  runtime.rs
