[package]
name = "GDBLive"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = "0.4.2"
md-5 = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }



[lib]
crate-type = ["cdylib"]
