[package]
name = "gdblive"
version = "0.1.0"
edition = "2021"

[dependencies]
godot = "0.4.2"
md-5 = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
flate2 = "1.0"
byteorder = "1.5"
futures = "0.3"



[lib]
crate-type = ["cdylib"]
